阶段 9 第 4 课：产物落盘与上下文压缩
新增核心组件：
- ArtifactManager：大工具结果落盘，历史中留引用
- CompactionUtils：snip（删除中间组）和 micro（占位符替换）压缩
- ContextCompactor：三层压缩统一入口，artifact 永远先执行

消息契约与配对验证：
- ChatMessage：四角色消息封装（user/assistant/tool/system）
- MessageGroup：消息分组（绝不拆散工具调用配对）
- MessageUtils：validateToolPairing 保证配对完整性

文件安全边界（为第 4 课准备）：
- WorkspaceGuard：词法关（路径遍历检测）+ 物理关（规范化校验）

测试覆盖：
- 19 个新测试（artifact 7个 + compaction 9个 + utils 3个）
- 所有测试通过（115/115）
- 覆盖核心不变量：配对、分组、压缩、路径安全

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>